fixed the alignments for smaller screens and also added spacing on places where it was needed

--- a/src/components/ListNavbar/ListNavbar.module.css
+++ b/src/components/ListNavbar/ListNavbar.module.css
@@ -112,3 +112,10 @@
     margin-top: 10px;
   }
 }
+
+
+@media only screen and (max-width: 1200px){
+  .logoutbtn {
+    margin-bottom: 10px;
+  }
+}
